<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/contextView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.gestionUser.LoginActivity"
    android:background="@drawable/ic_logo">

    <ImageView
        android:id="@+id/imageEllipseNineOne"
        android:layout_width="366dp"
        android:layout_height="149dp"
        android:layout_gravity="top|start"
        android:scaleType="fitXY"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/img_ellipse9_81x292"
        tools:ignore="ContentDescription" />


    <ImageView
        android:id="@+id/imageEllipseTen"
        android:layout_width="170dp"
        android:layout_height="68dp"
        android:layout_gravity="top|end"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/img_ellipse10"
        tools:ignore="ContentDescription"
        tools:src="@drawable/img_ellipse10" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tiEmailLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:hint="@string/input_email"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageEllipseNineOne"
        app:startIconDrawable="@drawable/ic_email">

        <!-- Ajoutez un EditText à l'intérieur du TextInputLayout -->
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/input_email"
            android:inputType="textEmailAddress" />

    </com.google.android.material.textfield.TextInputLayout>

    <!-- app:suffixText="@string/input_suffix_Email" -->

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tiPasswordLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:hint="@string/input_password"

        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tiEmailLayout"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/Primary"
        app:startIconDrawable="@drawable/ic_password">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#43A047"
            android:drawablePadding="20dp"
            android:inputType="textPassword"
            android:password="true"
            android:textColor="@color/Primary"
            android:textColorHighlight="@color/Primary"
            android:textColorHint="@color/Primary"
            android:textColorLink="@color/Primary"
            tools:ignore="Deprecated" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnForgotPassword"
        style="@style/Widget.Material3.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_forgot_password"
        app:layout_constraintEnd_toEndOf="@+id/tiPasswordLayout"
        app:layout_constraintTop_toBottomOf="@+id/tiPasswordLayout" />

    <CheckBox
        android:id="@+id/btnRememberMe"
        style="@style/Widget.Material3.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_remember_me"
        app:layout_constraintStart_toStartOf="@+id/tiPasswordLayout"
        app:layout_constraintTop_toBottomOf="@+id/tiPasswordLayout" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/btn_login"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnForgotPassword" />

    <TextView
        android:id="@+id/txtOR"
        style="@style/Widget.Material3.Button.TextButton"
        android:layout_width="374dp"
        android:layout_height="28dp"
        android:layout_margin="20dp"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:text="@string/txt_or"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="10dp"
        android:weightSum="3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtOR">

        <ImageView
            android:id="@+id/btnFacebookLogin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/Content_description_facebook_button"
            android:padding="20dp"
            android:src="@drawable/ic_btn_facebook" />

        <ImageView
            android:id="@+id/btnGoogleLogin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/Content_description_google_button"
            android:padding="20dp"
            android:src="@drawable/ic_btn_google" />

        <ImageView
            android:id="@+id/btnAppleLogin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/Content_description_apple_button"
            android:padding="20dp"
            android:src="@drawable/ic_apple" />
    </LinearLayout>

    <Button
        android:id="@+id/btnCreateAccount"
        style="@style/Widget.Material3.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/btn_register_now"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>