<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="#99B7DAA6"
    app:barrierMargin="1dp"
    tools:context=".ui.gestionUser.User_ValidationCode">

    <Button
        android:id="@+id/btnReturn"
        style="@style/Widget.Material3.Button.IconButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/Content_description_back"
        app:icon="@drawable/ic_arrow_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtForgotPwd1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_marginTop="25dp"
        android:gravity="start|center"
        android:text="@string/txt_otp_Confirmation"
        android:textColor="@color/colorPrimary"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnReturn" />

    <TextView
        android:id="@+id/txtForgotPwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_marginTop="20dp"
        android:gravity="start|center"
        android:text="@string/txt_otp_validation"
        android:textColor="@color/Primary"
        android:textSize="18dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtForgotPwd1" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:orientation="horizontal"
        android:weightSum="4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtForgotPwd">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tiCode1Layout"
            style="@style/EllipseTextInputStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:layout_weight="1">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tiCode1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/Content_description_1"
                android:gravity="center"

                android:inputType="number"
                android:maxLength="1"
                android:textSize="40sp"
                android:textStyle="bold" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tiCode2Layout"
            style="@style/EllipseTextInputStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:layout_weight="1">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tiCode2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/Content_description_2"
                android:gravity="center"
                android:inputType="number"
                android:maxLength="1"
                android:textSize="40sp"
                android:textStyle="bold" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tiCode3Layout"
            style="@style/EllipseTextInputStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:layout_weight="1">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tiCode3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/Content_description_3"
                android:gravity="center"
                android:inputType="number"
                android:maxLength="1"
                android:textSize="40sp"
                android:textStyle="bold" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tiCode4Layout"
            style="@style/EllipseTextInputStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:layout_weight="1">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tiCode4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/Content_description_4"
                android:gravity="center"
                android:inputType="number"
                android:maxLength="1"
                android:textSize="40sp"
                android:textStyle="bold"
                tools:ignore="SpeakableTextPresentCheck" />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <Button
        android:id="@+id/btnVerify"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_marginTop="80dp"
        android:backgroundTint="#437D28"
        android:paddingLeft="24dp"

        android:text="@string/btn_verify"
        android:textSize="20sp"
        app:barrierMargin="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

    <TextView
        android:id="@+id/txtNoReception"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_marginTop="124dp"
        android:gravity="center"
        android:text="@string/txt_no_reception"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnVerify" />

    <Button
        android:id="@+id/btnResendCode"
        style="@style/Widget.Material3.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"

        android:backgroundTint="#437D28"
        android:text="@string/btn_resend_code"
        android:textColor="#FFFFFF"
        app:barrierMargin="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtNoReception" />


</androidx.constraintlayout.widget.ConstraintLayout>