<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".ui.gestionUser.main_activity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="307dp"
        android:layout_height="292dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="199dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.253"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        app:srcCompat="@drawable/ic_logof"
        />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="180dp"
        android:layout_height="31dp"
        android:layout_marginTop="24dp"
        android:text="@string/green_world"
        android:textAlignment="center"
        android:textColor="@color/endblue"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/textView6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="328dp"
        android:layout_height="83dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:text="@string/main_desc"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/imageView2"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <RelativeLayout
        android:id="@+id/frame_2"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="148dp"
        android:background="@drawable/button_border"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">


        <TextView
            android:id="@+id/login"
            android:layout_width="180dp"
            android:layout_height="31dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="13dp"
            android:text="@string/btn_login"
            android:textAlignment="center"
            android:textColor="@color/white"

            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/frame_3"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_marginEnd="16dp"

        android:layout_marginBottom="148dp"
        android:background="@drawable/button_border2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <TextView
            android:id="@+id/btnSubmit"
            android:layout_width="180dp"
            android:layout_height="31dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="13dp"
            android:text="@string/btn_signup"
            android:textAlignment="center"
            android:textColor="@color/Primary"

            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
